add public tableau embed link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div *ngFor ="let item of weatherList">
-  <h5>{{item.date}}</h5>
+<div #angularDiv style="display: flex; justify-content: center">
 </div>
 
 <router-outlet></router-outlet>
